# Axum-Cookbook

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
examples/: quick_dev.rs
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/log/: mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
web-folder/: index.html
