[package]
name = "axum_cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1", features = ["full"]}
tower-cookies = "0.9.0"
tower-http = {version = "0.4", features = ["fs"]}
lazy-regex = "2"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.2"
