[package]
name = "axum-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
# -- Json
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
serde_with = "3.4"
# -- Web
axum = "0.6.18"
tower-cookies = "0.9.0"
tower-http = {version = "0.4", features = ["fs"]}
# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# -- Others
lazy-regex ="3.0.2"
async-trait = "0.1"
strum_macros = "0.25.3"
uuid = { version = "1", features = ["v4", "fast-rng",]}


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.2"
